<resources>
    <string name="app_name">PrenotazionePosti</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_ricarica">ricarica dati</string>

    <string name="menu_home">Home</string>
    <string name="menu_visualizza_dati">visualizza dati</string>
    <string name="menu_filtra">filtra</string>
    <string name="menu_cerca_per_persona">cerca per persona</string>
    <string name="fragment_carica_dati">caricamento dati in corso</string>
    <string name="fragment_filtra_dati">filtra per postazione</string>
    <string name="fragment_filtra_persona">filtra per persona</string>
    <string name="fragment_inserisci_token">Inserisci token</string>
    <string name="fragment_visualizza_dati">visualizza le prenotazioni</string>
    <string name="inserisci_qui_il_token">inserisci qui il token</string>
    <string name="inserimento_token">inserimento token</string>
    <string name="invia">invia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>