<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InserisciTokenFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/titolo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.8"
            android:text="@string/inserimento_token"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/testo"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/testo"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.9"
            android:autofillHints="name"
            android:inputType="text"
            android:hint="@string/inserisci_qui_il_token"
            android:gravity="center"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titolo"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.8"
            android:text="@string/invia"
            android:gravity="center"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/testo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>